      the default case.

      \item \code{La.svd()} accepts logical matrices (as documented, and
      as \code{svd()} did).
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{lgamma(x)} for very small \code{x} (in the
      denormalized range) is no longer \code{Inf} with a warning.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{beta(a, b)} could overflow to infinity in its
      calculations when one of \code{a} and \code{b} was less than one.
      (\PR{15075}) 

      \item \code{lbeta(a, b)} no longer gives \code{NaN} if \code{a} or
      \code{b} is very small (in the denormalized range).
      
      \item \code{bquote()} is now able to substitute default arguments in
      single-argument functions.  (\PR{15077})
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item \code{R_SVN_REVISION} in \file{Rversion.h} is now an integer
      and hence usable as e.g. \code{#if R_SVN_REVSION < 70000}.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{X11()} window gains an icon: the
      latter may be especially useful on Ubuntu's \sQuote{Unity}
      interface.

      The \code{WM_CLASS} should be set in circumstances where the
      Window Manager failed to make use of X11 resource settings.

      (Contributed by Philip Johnson.)

      \item The \code{"Date"} and \code{"POSIXt"} methods for
      \code{cut()} will accept an unsorted \code{breaks} argument (as
      the default method does, although this was undocumented).
      (Wish of \PR{14961}.)

      \item Reference class methods (in the \pkg{methods} package) that
      use other methods in an indirect way (e.g., by \code{sapply()})
      must tell the code analysis to include that method.  They can now
      do so by invoking \code{$usingMethods()}. %$

      \item More Polish translations are available: for the