@@ -1,6 +1,6 @@
 % File src/library/graphics/man/image.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2011 R Core Team
+% Copyright 1995-2012 R Core Team
 % Distributed under GPL 2 or later
 
 \newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
@@ -47,8 +47,9 @@ image(x, \dots)
   \item{xlab, ylab}{each a character string giving the labels for the x and
     y axis.  Default to the \sQuote{call names} of \code{x} or \code{y}, or to
     \code{""} if these were unspecified.}
-  \item{breaks}{a set of breakpoints for the colours: must give one more
-    breakpoint than colour.}
+  \item{breaks}{a set of finite numeric breakpoints for the colours:
+    must have one more breakpoint than colour and be in increasing
+    order.  Unsorted vectors will be sorted, with a warning.} 
   \item{oldstyle}{logical. If true the midpoints of the colour intervals
     are equally spaced, and \code{zlim[1]} and \code{zlim[2]} were taken
     to be midpoints.  The default is to have colour intervals of equal
@@ -90,7 +91,8 @@ image(x, \dots)
 
   If \code{breaks} is specified then \code{zlim} is unused and the
   algorithm used follows \code{\link{cut}}, so intervals are closed on
-  the right and open on the left except for the lowest interval.
+  the right and open on the left except for the lowest interval which is
+  closed at both ends.
 
   Notice that \code{image} interprets the \code{z} matrix as a table of
   \code{f(x[i], y[j])} values, so that the x axis corresponds to row
